src/.vuepress/styles/index.styl
/**
 * Custom Styles here.
 *
 * ref：https://v1.vuepress.vuejs.org/config/#index-styl
 */

div[class~=language-rust]:before {
    content:"rust"
}


a:not(.v-btn--has-bg) {
    text-decoration: none !important;
    color: #f6a17c !important;
}

.icon.outbound {
    display: none !important;
}

iframe {
    margin-top: 3rem;
    margin-bottom: 3rem;
    width: 900px;
    height: 500px;
}

body {
  font-size: 1.2rem;
  color: #dadada !important;
}

.theme--dark.v-application {
  color: #dadada !important;
}

p {
}

